# configkit-starter

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/configkit/: __init__.py  config.py
tests/: test_cli.py  test_config.py  test_loaders.py  test_logging_setup.py  test_magic_methods.py  test_merger.py  test_packaging.py  test_protocols.py
