[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "configkit"
version = "0.1.0"
description = "A configuration management tool"
requires-python = ">=3.11"
dependencies = [
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["src/configkit"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
src = ["src"]
line-length = 88
